[package]
name = "show-image"
version = "0.1.0"
authors = ["karaler <karaler@bytelang.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true

[dependencies]
"kplayer-rust-wrap" = "1.5.0-rc1"
